--- a/ejercicio59/index.html
+++ b/ejercicio59/index.html
@@ -1,10 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel=stylesheet href=../style.css>
+  <script src="ejercicio.js"></script>
+</head>
+<body>
+  
+</body>
+</html>
 <div class="navegacion">
   <a href="../index.html" class="botonera__boton">Volver al Menú</a>
   <a href="../ejercicio2/index.html" class="botonera__boton">Siguiente Ejercicio</a>
 </div>
 
 
-<link rel=stylesheet href=../style.css>
 
 
