--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         <a class="botonera__boton" href="ejercicio87/index.html">Ejercicio 87</a>
         <a class="botonera__boton" href="ejercicio88/index.html">Ejercicio 88</a>
         <a class="botonera__boton" href="ejercicio89/index.html">Ejercicio 89</a>
+        <a class="botonera__boton" href="ejercicio90/index.html">Ejercicio 90</a>
 
       </div>
       
